--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav>
             <button onclick="createList()">Criar uma nova lista</button>
             <button>Ver listas já criadas</button>
+            <button>Ver listas já criadas</button>
         </nav>
     </header>
     <main>
