melhorias de codigo e organização

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <header>
         <h1>Lista de compra</h1>
         <nav>
-            <button onclick="createList()">Criar uma nova lista</button>
-            <button>Ver listas já criadas</button>
+            <button>Criar uma nova lista</button>
             <button>Ver listas já criadas</button>
         </nav>
     </header>
@@ -40,7 +39,7 @@
                             <option value="default">Escolha um grupo</option>
                         </select>
                     </span>
-                    <button onclick="insertProduct()">Adicionar</button>
+                    <button>Adicionar</button>
                 </div>
             </div>
         </div>
@@ -48,6 +47,9 @@
             <button>Salvar lista</button>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/group.js"></script>
+    <script src="./scripts/product.js"></script>
+    <script src="./scripts/utils.js"></script>
 </body>
 </html>
